samples/_failures_safe/1761002279_eb64d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aaadc49c.c: In function ‘print_log_stats’:
./samples/SAFE/__tmp_aaadc49c.c:150:5: error: expected declaration or statement at end of input
  150 |     printf("WARNING entries: %u\n", log_file->stats.warning_count);
      |     ^~~~~~
